old/infra-old/vault/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`vault.infra.durp.info`)
    kind: Rule
    services:
    - name: vault
      port: 8200
      scheme: https
  tls:
    secretName: vault-tls
